archive/base_objects_1_1-5/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: myingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  # - host: example.com
  - http:
      paths:
      - pathType: Prefix
        path: /forlaurka
        backend:
          service:
            name: nginx-svc
            port: 
              number: 80
      - pathType: Prefix
        path: /
        backend:
          service:
            name: multitool-svc
            port: 
              number: 8080
